<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:textColor="@color/office_green"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/office_green" />


    <TableRow
        android:id="@+id/addTableRow"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true">

        <ImageView
            android:id="@+id/iconAdd"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/ic_add" />

        <TextView
            android:id="@+id/addTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"/>
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transaction"
        android:textColor="@color/office_green"
        android:id="@+id/textView"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/office_green" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight=".5"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/startDateEdit"
            android:hint="@string/startDate"/>

        <EditText
            android:layout_weight=".5"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/endDateEdit"
            android:hint="@string/stopDate"/>
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/getTransactions"
        android:layout_gravity="center"
        android:id="@+id/getTransactionsButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/office_green" />

</LinearLayout>