<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        android:textColor="@color/office_green"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="@color/office_green" />

    <TableRow
        android:id="@+id/addAccountTableRow"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:id="@+id/iconAdd"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/ic_add" />

        <TextView
            android:id="@+id/addTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addAccount"
            android:textSize="16sp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/office_green" />

    <TableRow
        android:id="@+id/clearDatabaseTableRow"
        android:layout_width="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/ic_add" />

        <TextView
            android:id="@+id/clearTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textSize="16sp"
            android:paddingRight="40dp"
            android:paddingTop="15dp"/>
    </TableRow>
</LinearLayout>